force-app/main/default/objects/Training__c/fields/Post_Score__c.field-meta.xml
<CustomField>
    <fullName>Post_Score__c</fullName>
    <label>Post Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>