force-app/main/default/objects/Training__c/fields/Pre_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Score__c</fullName>
    <label>Pre Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>