force-app/main/default/objects/Training__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <label>Skill Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>